--- a/static/styles.css
+++ b/static/styles.css
@@ -151,3 +151,20 @@ h1 {
     padding: 10px;
     border-bottom: 1px solid #ddd;
 }
+
+/* Back Button */
+.back-btn {
+    font-size: 16px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #007BFF;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
+.back-btn:hover {
+    background-color: #0056b3;
+}
