--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container" id="flashcard-container">
+        <!-- Back Button -->
+        <button class="back-btn" onclick="goBack()">&#8592; Back to Home</button>
+        
         <!-- Flashcard Viewer -->
         <div class="flashcard-wrapper">
             <div class="flashcard" id="flashcard">
