--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -25,6 +25,9 @@
             <span class="arrow" id="next-btn">&#8594;</span>
         </div>
 
+        <!-- Save Button -->
+        <button class="save-btn" onclick="saveFlashcards()">💾 Save Flashcards</button>
+
         <!-- Flashcard List -->
         <div class="flashcard-list">
             <h3>All Flashcards</h3>
