--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" id="flashcard-container">
         <!-- Back Button -->
-        <button class="back-btn" onclick="goBack()">&#8592; Back to Home</button>
+        <button class="button back-btn" onclick="goBack()">&#8592; Back to Home</button>
         
         <!-- Flashcard Viewer -->
         <div class="flashcard-wrapper">
@@ -21,12 +21,12 @@
 
         <!-- Navigation Arrows -->
         <div class="navigation">
-            <span class="arrow" id="prev-btn">&#8592;</span>
-            <span class="arrow" id="next-btn">&#8594;</span>
+            <span class="arrow" id="prev-btn">&lt;</span>
+            <span class="arrow" id="next-btn">&gt;</span>
         </div>
 
         <!-- Save Button -->
-        <button class="save-btn" onclick="saveFlashcards()">💾 Save Flashcards</button>
+        <button class="button save-btn" onclick="saveFlashcards()">💾 Save Flashcards</button>
 
         <!-- Flashcard List -->
         <div class="flashcard-list">
