--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>AI Flashcard Generator</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
-<body>
+<body class="home-page">
     <h1 class="title">AI Flashcard Generator</h1>
     <div class="center-container">
         <!-- Form for YouTube Link -->
