--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -6,7 +6,7 @@
     <title>Flashcards</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
-<body>
+<body class="flashcard-page">
     <div class="container" id="flashcard-container">
         <!-- Back Button -->
         <button class="button back-btn" onclick="goBack()">&#8592; Back to Home</button>
