--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
-/* Global Styles */
-body {
+/* Home Page Styles */
+body.home-page {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -8,6 +8,15 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #f5f5f5;
+}
+
+/* Flashcard Page Styles */
+body.flashcard-page {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
     background-color: #f5f5f5;
 }
 
@@ -130,6 +139,7 @@ h1 {
     padding: 5px 15px;
     border-radius: 50%;
     user-select: none;
+    line-height: normal;
 }
 
 .arrow:hover {
