added a loading screen

--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -36,6 +36,13 @@
             </ul>
         </div>
     </div>
+
+    <!-- Loading Screen -->
+    <div id="loading-screen" class="loading hidden">
+        <div class="spinner"></div>
+        <p>Generating flashcards, please wait...</p>
+    </div>
+    
     <script src="/static/script.js"></script>
 </body>
 </html>
