added flashcard counter

--- a/static/styles.css
+++ b/static/styles.css
@@ -260,3 +260,9 @@ button {
     }
 }
 
+#flashcard-counter {
+    min-width: 50px;
+    text-align: center;
+    font-size: 18px;
+    color: #333;
+}
