--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -22,6 +22,7 @@
         <!-- Navigation Arrows -->
         <div class="navigation">
             <span class="arrow" id="prev-btn">&lt;</span>
+            <span id="flashcard-counter">1/10</span>
             <span class="arrow" id="next-btn">&gt;</span>
         </div>
 
