--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <div class="center-container">
         <!-- Form for YouTube Link -->
         <div id="link-form">
+            <img src="/static/images/video-icon.png" alt="Video Icon" class="video-icon">
             <h1>Paste in a link to a YouTube video</h1>
             <form id="generate-form">
                 <input
