--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcards</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="icon" href="/static/images/favicon.png" type="image/png">
 </head>
 <body class="flashcard-page">
     <div class="container" id="flashcard-container">
