added footer to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,5 +67,19 @@
             }
         });
     </script>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/aristotle-temmerath" target="_blank">
+                <img src="/static/images/linkedin-icon.png" alt="LinkedIn" class="footer-icon">
+            </a>
+            <a href="https://github.com/thekalvpsia" target="_blank">
+                <img src="/static/images/github-icon.png" alt="GitHub" class="footer-icon">
+            </a>
+        </div>
+        <p>Icons by <a href="https://www.flaticon.com/authors/freepik" target="_blank">Freepik</a> from 
+        <a href="https://www.flaticon.com/" target="_blank">Flaticon</a></p>
+    </footer>
 </body>
 </html>
