--- a/static/styles.css
+++ b/static/styles.css
@@ -274,3 +274,39 @@ button {
     margin: 0 auto -10px;
     opacity: 0.8;
 }
+
+.footer {
+    text-align: center;
+    padding: 10px 0;
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.social-links {
+    margin-bottom: 5px;
+}
+
+.footer-icon {
+    width: 30px;
+    height: auto;
+    margin: 0 10px;
+    transition: opacity 0.3s ease;
+}
+
+.footer-icon:hover {
+    opacity: 0.7;
+}
+
+.footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
